--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".NoteActivity"></activity>
         <activity android:name=".NewNoteActivity"></activity>
         <activity android:name=".CadastroActivity"></activity>
+        <activity android:name=".EdtNotesActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
